--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -81,9 +81,7 @@
 		<div class="main-btn"><a href="/consulting">견적 문의</a></div>
 	</div>
 </div>
-<a href="http://pf.kakao.com/_xetCxaG" target="_blank" class="kakao-btn">
-    <img src="http://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
-</a>
+<div th:replace="~{main/kakao :: kakao}"></div>
 
 <script language="javascript">
 function setCookie( name, value, expiredays ){
