--- a/yejo/src/main/resources/templates/admin/sidebar.html
+++ b/yejo/src/main/resources/templates/admin/sidebar.html
@@ -51,6 +51,13 @@
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>견적문의</span></a>
             </li>
+            
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="location">
+                    <i class="fas fa-fw fa-map-marker"></i>
+                    <span>위치</span></a>
+            </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
@@ -60,18 +67,11 @@
             </li>
             
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="location">
-                    <i class="fas fa-fw fa-map-marker"></i>
-                    <span>위치</span></a>
-            </li>
-            
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="company-info">
                     <i class="fas fa-fw fa-clipboard-list"></i>
                     <span>회사정보</span></a>
-            </li>
+            </li> -->
 
         </ul>
         <!-- End of Sidebar -->
