--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -131,9 +131,7 @@
 		</div>
 	</div>
 </div>
-<a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
-    <img src="http://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
-</a>
+<div th:replace="~{main/kakao :: kakao}"></div>
 
 	<!-- footer -->
    <div th:replace="~{main/footer :: footer}"></div>
