--- a/yejo/src/main/resources/templates/main/portfolio-detail.html
+++ b/yejo/src/main/resources/templates/main/portfolio-detail.html
@@ -109,9 +109,7 @@
 </div>
 
 <!-- 카카오톡 버튼 -->
-<a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
-    <img src="http://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
-</a>
+<div th:replace="~{main/kakao :: kakao}"></div>
 
 <script src="/js/masonry.pkgd.min.js"></script>
 <script>
