--- a/yejo/src/main/resources/templates/main/portfolio-detail.html
+++ b/yejo/src/main/resources/templates/main/portfolio-detail.html
@@ -60,11 +60,11 @@
                     <div class="img-slider">
                         <div class="items">
                             <div class="item">
-                                <img th:src="@{'/' + ${portfolio.thumbnailImage}}" alt="썸네일 이미지">
+                                <img th:src="${portfolio.thumbnailImage}" alt="썸네일 이미지">
                             </div>
                             <div th:each="image : ${portfolio.images}">
                                 <div class="item">
-                                    <img th:src="@{'/' + ${image.imagePath}}" alt="포트폴리오 이미지">
+                                    <img th:src="${image.imagePath}" alt="포트폴리오 이미지">
                                 </div>
                             </div>
                         </div>
@@ -97,8 +97,8 @@
                     <ul class="items">
                         <li class="item-sizer"></li>
                         <li class="item" th:each="image : ${portfolio.images}">
-                            <a th:href="@{'/' + ${image.imagePath}}" data-gall="gall1" class="venobox">
-                                <img th:src="@{'/' + ${image.imagePath}}" alt="포트폴리오 이미지">
+                            <a th:href="${image.imagePath}" data-gall="gall1" class="venobox">
+                                <img th:src="${image.imagePath}" alt="포트폴리오 이미지">
                             </a>
                         </li>
                     </ul>
