--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -34,8 +34,9 @@
 	<link rel="stylesheet" type="text/css" href="/css/consultant.css">
 	<link rel="stylesheet" type="text/css" href="/css/kakao.css">
 
+	<script src="/js/main/consultantRestApi.js" defer></script>
 	<script src="/js/consultant.js" defer></script>
-	<script src="/t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="/js/addressAPI.js" defer></script>
 	<script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.gnb.js"></script>
@@ -208,15 +209,8 @@ function inputNum(obj){
     </script>
 <!-- S 쓰기페이지 -->
 <div class="wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-		<form name="form1" method="post" action="/module/board/board_evn.php" ENCTYPE="multipart/form-data" onsubmit="javascript:return frmCheck(this);">
-				<input type="hidden" name="evnMode" value="write" title="글 모드">
-		<input type="hidden" name="w_user" value="">
-		
-		<input type="hidden" name="boardid" value="inquiry" title="게시판 아이디">
-		<input type="hidden" name="returnURL" value="/consulting.php?mNum=3&sNum=1&boardid=inquiry&mode=list&category=">
-		<input type="hidden" name="idx" value="" title="글 번호">
-		<input type="hidden" name="checked_contents" id="checked_contents" title="글 작성 확인">
-		<input type="hidden" id="uselock" name="uselock" title="" value="Y" >
+		<form id="form1">
+
 
 		<div class="consult">
 			<div class="agree-wrap">
@@ -315,23 +309,25 @@ function inputNum(obj){
 				</div>
 			</div>
 		</div>
-
+		
+	
 		<div class="consult-form">
 		    <h2 class="form-title"><span class="highlight">고객 정보</span></h2>
 		    <div class="form-group">
 		        <div class="form-box">
 		            <dl>
 		                <dt><label for="customer_name">성함</label></dt>
-		                <dd><input type="text" name="customer_name" id="customer_name" placeholder="성함을 입력해 주세요." class="form-input" required></dd>
+		                <dd><input type="text" name="name" id="customer_name" placeholder="성함을 입력해 주세요." class="form-input" required></dd>
 		            </dl>
 		        </div>
 		     <div class="form-box">
 			    <dl>
 			        <dt><label for="contact1">연락처</label></dt>
 			        <dd class="tel-input">
-			            <input type="tel" name="contact_part1" id="contact1" class="form-input contact-input small-input" maxlength="4" required> - 
-			            <input type="tel" name="contact_part2" id="contact2" class="form-input contact-input medium-input" maxlength="4" required> - 
-			            <input type="tel" name="contact_part3" id="contact3" class="form-input contact-input medium-input" maxlength="4" required>
+			            <input type="tel"  id="contact1" class="form-input contact-input small-input" maxlength="4" required> - 
+			            <input type="tel"  id="contact2" class="form-input contact-input medium-input" maxlength="4" required> - 
+			            <input type="tel"  id="contact3" class="form-input contact-input medium-input" maxlength="4" required>
+			            <input type="hidden" id="tel" name="tel">
 			        </dd>
 			    </dl>
 			</div>
@@ -339,7 +335,7 @@ function inputNum(obj){
 		        <div class="form-box">
 		            <dl>
 		                <dt><label for="customer_email">이메일</label></dt>
-		                <dd><input type="email" name="customer_email" id="customer_email" placeholder="이메일을 입력해 주세요." class="form-input" required></dd>
+		                <dd><input type="email" name="email" id="customer_email" placeholder="이메일을 입력해 주세요." class="form-input" required></dd>
 		            </dl>
 		        </div>                            
 		        <div class="form-box">
@@ -347,22 +343,22 @@ function inputNum(obj){
 		                <dt>유입 경로</dt>
 		                <dd>
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_youtube" value="유튜브" checked><label for="source_youtube">유튜브</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_youtube" value="유튜브" checked><label for="source_youtube">유튜브</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_instagram" value="인스타그램"><label for="source_instagram">인스타그램</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_instagram" value="인스타그램"><label for="source_instagram">인스타그램</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_blog" value="블로그"><label for="source_blog">블로그</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_blog" value="블로그"><label for="source_blog">블로그</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_referral" value="지인소개"><label for="source_referral">지인소개</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_referral" value="지인소개"><label for="source_referral">지인소개</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_search" value="인터넷검색"><label for="source_search">인터넷검색</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_search" value="인터넷검색"><label for="source_search">인터넷검색</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="referral_source" id="source_others" value="기타"><label for="source_others">기타</label></span>
+		                        <span class="radiobox"><input type="radio" name="inflow" id="source_others" value="기타"><label for="source_others">기타</label></span>
 		                    </span>
 		                </dd>
 		            </dl>
@@ -370,7 +366,7 @@ function inputNum(obj){
 		        <div class="form-box">
 		            <dl>
 		                <dt><label for="customer_password">비밀번호</label></dt>
-		                <dd><input type="password" name="customer_password" id="customer_password" placeholder="비밀번호를 입력해 주세요." class="form-input" required></dd>
+		                <dd><input type="password" name="passwd" id="customer_password" placeholder="비밀번호를 입력해 주세요." class="form-input" required></dd>
 		            </dl>
 		        </div>
 		    </div>
@@ -381,10 +377,10 @@ function inputNum(obj){
 		            <dl>
 		                <dt><label for="construction_address">공사 예정지 주소</label></dt>
 		                <dd>
-		                	<input type="text" class="form-input" style="width:80px;" id="sample2_postcode" placeholder="우편번호">
+		                	<input type="text" class="form-input" name="post" style="width:80px;" id="sample2_postcode" placeholder="우편번호">
 							<input type="button" class="form-input address" onclick="sample2_execDaumPostcode()" value="주소 검색"><br>
-							<input type="text" id="sample2_address" class="form-input" placeholder="주소"><br>
-							<input type="text" id="sample2_detailAddress" class="form-input" placeholder="상세주소">
+							<input type="text" name="address1" id="sample2_address" class="form-input" placeholder="주소"><br>
+							<input type="text" name="address2" id="sample2_detailAddress"	 class="form-input" placeholder="상세주소">
 							<input type="text" id="sample2_extraAddress" class="form-input" placeholder="참고항목" style="display:none;">
 							
 							<!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
@@ -398,24 +394,24 @@ function inputNum(obj){
 		            <dl>
 		                <dt>공간 구성</dt>
 		                <dd>
-		                    <span class="inner">평수 <input type="text" name="area_size" id="area_size" class="form-input small-input" onkeypress="inputNum"> 평</span>
+		                    <span class="inner">평수 <input type="text" name="areaSize" id="area_size" class="form-input small-input" onkeypress="inputNum"> 평</span>
 		                    <span class="bar"></span>
-		                    <span class="inner">방 <input type="text" name="room_count" id="room_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
+		                    <span class="inner">방 <input type="text" name="roomCount" id="room_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
 		                    <span class="bar"></span>
-		                    <span class="inner">욕실 <input type="text" name="bath_count" id="bath_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
+		                    <span class="inner">욕실 <input type="text" name="bathCount" id="bath_count" class="form-input small-input" onkeypress="inputNum"> 칸</span>
 		                </dd>
 		            </dl>
 		        </div>
 		        <div class="form-box">
 		            <dl>
 		                <dt>공사 시작일</dt>
-		                <dd><input type="text" name="construction_start_date" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
+		                <dd><input type="text" name="constructionStartDate" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
 		            </dl>
 		        </div>
 		        <div class="form-box">
 		            <dl>
 		                <dt>입주 예정일</dt>
-		                <dd><input type="text" name="move_in_date" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
+		                <dd><input type="text" name="moveInDate" class="form-input datepicker" placeholder="YYYY-MM-DD" required></dd>
 		            </dl>
 		        </div>
 		        <div class="form-box">
@@ -423,22 +419,22 @@ function inputNum(obj){
 		                <dt>공간 유형</dt>
 		                <dd>
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_apartment" value="아파트" checked><label for="type_apartment">아파트</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceType" id="type_apartment" value="아파트" checked><label for="type_apartment">아파트</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_house" value="단독주택"><label for="type_house">단독주택</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceType" id="type_house" value="단독주택"><label for="type_house">단독주택</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_villa" value="빌라"><label for="type_villa">빌라</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceType" id="type_villa" value="빌라"><label for="type_villa">빌라</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_mixed" value="주상복합"><label for="type_mixed">주상복합</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceType" id="type_mixed" value="주상복합"><label for="type_mixed">주상복합</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_officetel" value="오피스텔"><label for="type_officetel">오피스텔</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceType" id="type_officetel" value="오피스텔"><label for="type_officetel">오피스텔</label></span>
 		                    </span>&nbsp;&nbsp;
 		                    <span class="item">
-		                        <span class="radiobox"><input type="radio" name="space_type" id="type_others" value="기타"><label for="type_others">기타</label></span>
+		                        <span class="radiobox"><input type="radio" name="spaceTDype" id="type_others" value="기타"><label for="type_others">기타</label></span>
 		                    </span>&nbsp;&nbsp;
 		                </dd>
 		            </dl>
@@ -477,32 +473,32 @@ function inputNum(obj){
 		        <div class="form-box wide-box">
 		            <dl>
 		                <dt><label for="floor_plan">층별 배치도</label></dt>
-		                <dd><input type="file" name="floor_plan" id="floor_plan" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
+		                <dd><input type="file" id="floor_plan_file" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
 		            </dl>
 		        </div>
 		        
 		        <div class="form-box wide-box">
 		            <dl>
-		                <dt><label for="floor_plan">참고 사진(URL)</label></dt>
-		                <dd><input type="file" name="floor_plan" id="floor_plan" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
-		                <dd><input type="text" name="floor_plan" id="floor_plan" class="form-input" placeholder="참고할 수 있는 사이트의 URL을 입력해주세요"></dd>
+		                <dt><label for="reference">참고 사진(URL)</label></dt>
+		                <dd><input type="file" id="reference_file" class="form-input" accept=".jpg, .jpeg, .png, .pdf"></dd>
+		                <dd><input type="text" name="referenceUrl" id="reference_url" class="form-input" placeholder="참고할 수 있는 사이트의 URL을 입력해주세요"></dd>
 		            </dl>
 		        </div>
 		        <div class="form-box wide-box">
 		            <dl>
 		                <dt><label for="floor_plan">기타 문의사항</label></dt>
-		                <dd><textarea class="inquiry"></textarea></dd>
+		                <dd><textarea class="inquiry" name="additionalInquiries"></textarea></dd>
 		            </dl>
 		        </div>
 		    </div>
 		</div>
+		</form>
 
 		<div class="buttons">
 			<div class="cen">
-				<input type="submit" value="견적신청" class="btn-pack xlarge type2 focus round" title="견적 신청">
+				<input type="button" id="submit_btn" value="견적신청" class="btn-pack xlarge type2 focus round" title="견적 신청">
 			</div>
 		</div>
-	</form>
 </div>
 			
 			<!-- 고객요청사항 : 연락처 작성 시 다들 다르게 작성하실 것 같아서 010 띄고 0000 띄고 0000 이렇게 3개로 나누어 작성할 수 있도록 설정 부탁드립니다.
