사진 저장 수정

--- a/yejo/src/main/resources/templates/admin/about.html
+++ b/yejo/src/main/resources/templates/admin/about.html
@@ -330,7 +330,7 @@
                 .catch(error => {
                     alert('저장 실패: ' + error.message);
                 });
-            }, 'image/jpeg');
+            }, 'image/png');
         });
     });
 
