--- a/yejo/src/main/resources/templates/main/company.html
+++ b/yejo/src/main/resources/templates/main/company.html
@@ -77,7 +77,7 @@
 				<div class="greeting wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
                     <div class="img">
                         <!-- 이미지 경로 바인딩 -->
-                        <img th:src="@{'/uploads/' + ${savedImagePath}}" alt="대표 이미지">
+                        <img th:src="${savedImagePath}" alt="대표 이미지">
                     </div>
 					<div class="txt-wrap">
 						<div class="col">
