feat: 이벤트 팝업창 기능구현

--- a/yejo/src/main/resources/templates/admin/sidebar.html
+++ b/yejo/src/main/resources/templates/admin/sidebar.html
@@ -67,6 +67,13 @@
             </li>
             
             <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="popup">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>팝업</span></a>
+            </li>
+            
+            <!-- Nav Item - Tables -->
             <!-- <li class="nav-item">
                 <a class="nav-link" href="company-info">
                     <i class="fas fa-fw fa-clipboard-list"></i>
