feat: 이벤트 팝업창 기능구현

--- a/yejo/src/main/resources/templates/admin/popup.html
+++ b/yejo/src/main/resources/templates/admin/popup.html
@@ -81,7 +81,7 @@
 
                         </div>
                         <div class="card-body">
-                            <div id="popup2" class="admin-popup" style="z-index:1000; position:absolute; left:500px; top:200px; width:500px; display:none;">
+                            <div id="popup2" class="admin-popup" style="z-index:1000; position:absolute; left:500px; top:200px; width:500px; ">
                                 <div class="admin-popup-inner">
                                     <div class="admin-popup-content">
                                         <a th:href="${popup.link}"><img id="popupImage" th:src="${popup.filePath}" alt=""></a>
