AWS 배포 때문에 수정이 조금 있었음 주석처리함

--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -13,7 +13,7 @@
 	<title>YEJO 인테리어</title>
 
 	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
-	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
