--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="YEJO인테리어">
     	<title>YEJO 인테리어</title>
 
-	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
 	<link rel="stylesheet" type="text/css" href="/css/reset.css">
