drag and drop 수정

--- a/yejo/src/main/resources/templates/admin/about.html
+++ b/yejo/src/main/resources/templates/admin/about.html
@@ -36,10 +36,11 @@
             transition: border-color 0.3s ease;
         }
 
-        #dropZone:hover {
-            border-color: #aaa;
+        #dropZone.dragover, #dropZone:hover {
+            border-color: #007bff;
+            background-color: #e0f7fa;
         }
-
+        
         #cropImage {
             display: none;
             max-width: 100%;
