--- a/yejo/src/main/resources/templates/admin/portfolio.html
+++ b/yejo/src/main/resources/templates/admin/portfolio.html
@@ -43,8 +43,9 @@
             border-color: #aaa;
         }
 
-        #dropZone.dragover, #portfolioDropZone.dragover {
+        #dropZone:hover, #portfolioDropZone:hover, #dropZone.dragover, #portfolioDropZone.dragover {
             border-color: #007bff;
+            background-color: #e0f7fa;
         }
 
         #imagePReview {
