--- a/yejo/src/main/resources/templates/admin/review-management.html
+++ b/yejo/src/main/resources/templates/admin/review-management.html
@@ -281,5 +281,5 @@
 	<script src="/js/sb-admin-2.min.js"></script>
 
 </body>
-<script src="../js/admin/Review-management.js"></script>
+<script src="/js/admin/review-management.js"></script>
 </html>
