--- a/yejo/src/main/resources/templates/admin/utilities-animation.html
+++ b/yejo/src/main/resources/templates/admin/utilities-animation.html
@@ -28,7 +28,7 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <div th:replace="/admin/sidebar :: sidebarFragment"></div>
+        <div th:replace="~{admin/sidebar :: sidebarFragment}"></div>
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
