--- a/yejo/src/main/resources/templates/admin/portfolio.html
+++ b/yejo/src/main/resources/templates/admin/portfolio.html
@@ -233,6 +233,12 @@
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Core plugin JavaScript-->
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="/js/sb-admin-2.min.js"></script>
+
     <script th:src="@{/js/admin/portfolio.js}"></script>
 </body>
 
