모바일 출력 사진 수정

--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -13,7 +13,7 @@
 	content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />
 <meta name="subject" content="YEJO인테리어">
 <meta name="description"
-	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 <meta name="keywords" content="YEJO인테리어">
 <title>YEJO 인테리어</title>
 
@@ -21,9 +21,9 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="YEJO인테리어">
 <meta property="og:description"
-	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 <meta property="og:image"
-	content="https://yejointerior.co.krhttp://yejo7048.cdn1.cafe24.com/images/sns_link.png">
+	content="http://yejo7048.cdn1.cafe24.com/images/yejo.png">
 <link rel="canonical" href="https://yejointerior.co.kr">
 
 <link rel="stylesheet" type="text/css"
