--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -7,15 +7,15 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
 	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
-	<meta name="description" content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
+	<meta name="description" content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 	<meta name="keywords" content="YEJO인테리어">
     	<title>YEJO인테리어</title>
 
 	<meta property="og:url"	content="https://yejointerior.co.kr">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="YEJO인테리어">
-	<meta property="og:description"	content="하이앤드 인테리어 주거, 상업, 공간컨설팅, 트렌드에 맞춰 나만의 라이프스타일을 디자인하다 YEJO인테리어.">
-	<meta property="og:image" content="https://yejointerior.co.krhttp://yejo7048.cdn1.cafe24.com/images/sns_link.png">
+	<meta property="og:description"	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
+	<meta property="og:image" content="http://yejo7048.cdn1.cafe24.com/images/yejo.png">
 	<link rel="canonical" href="https://yejointerior.co.kr">
 
 	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
