--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=3.0,user-scalable=yes" name="viewport">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="naver-site-verification" content="44191bf280942a37902e9d4e7aa341c5ddccb7db"/>	
-	<meta name="google-site-verification" content="eesc9VtVu28SGzXUtr4CyK0N1Fnfq2fiT00bMXgKmOk" />	<meta name="subject" content="YEJO인테리어">
+	<meta name="subject" content="YEJO인테리어">
 	<meta name="description" content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 	<meta name="keywords" content="YEJO인테리어">
     	<title>YEJO인테리어</title>
