--- a/yejo/src/main/resources/templates/admin/sidebar.html
+++ b/yejo/src/main/resources/templates/admin/sidebar.html
@@ -69,8 +69,14 @@
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="popup">
-                    <i class="fas fa-fw fa-table"></i>
+                    <i class="fas fa-fw fa-envelope"></i>
                     <span>팝업</span></a>
+            </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="kakao">
+                    <i class="fas fa-fw fa-coins"></i>
+                    <span>토큰 갱신</span></a>
             </li>
             
             <!-- Nav Item - Tables -->
@@ -79,7 +85,7 @@
                     <i class="fas fa-fw fa-clipboard-list"></i>
                     <span>회사정보</span></a>
             </li> -->
-
+			
         </ul>
         <!-- End of Sidebar -->
 </body>
