--- a/yejo/src/main/resources/templates/admin/banner.html
+++ b/yejo/src/main/resources/templates/admin/banner.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <!-- jQuery and jQuery UI -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/js/jquery-1.11.1.min.js" defer></script>
+    <script src="/js/jquery.ui.js" defer></script>
 </head>
 
 <body id="page-top">
