--- a/yejo/src/main/resources/templates/admin/sidebar.html
+++ b/yejo/src/main/resources/templates/admin/sidebar.html
@@ -52,6 +52,13 @@
                     <span>견적문의</span></a>
             </li>
             
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="policy">
+                    <i class="fas fa-lock" style="width: 17px;"></i>
+                    <span>개인정보처리방침</span></a>
+            </li>
+            
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="location">
