yejointerior.com으로 meta url 변경

--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -13,14 +13,14 @@
 <meta name="keywords" content="YEJO인테리어">
 <title>YEJO 인테리어</title>
 
-<meta property="og:url" content="https://yejointerior.co.kr">
+<meta property="og:url" content="https://yejointerior.com">
 <meta property="og:type" content="website">
 <meta property="og:title" content="YEJO인테리어">
 <meta property="og:description"
 	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 <meta property="og:image"
 	content="http://yejo7048.cdn1.cafe24.com/images/yejo.png">
-<link rel="canonical" href="https://yejointerior.co.kr">
+<link rel="canonical" href="https://yejointerior.com">
 
 <link rel="stylesheet" type="text/css"
 	href="/common/froala/css/froala_style.min.css" />
