https 환경 로그인 수정, favicon 수정, properties 수정 44333포트 적용

--- a/yejo/src/main/resources/templates/main/kakao.html
+++ b/yejo/src/main/resources/templates/main/kakao.html
@@ -1,3 +1,3 @@
 <a href="https://pf.kakao.com/_xetCxaG/chat" target="_blank" class="kakao-btn" th:fragment="kakao">
-    <img src="http://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
+    <img src="https://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
 </a>
