--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -11,7 +11,7 @@
 	<title>YEJO 인테리어</title>
 
 	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
-	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="https://yejo7048.cdn1.cafe24.com/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
@@ -41,7 +41,7 @@
 	</style>
 </head>
 
-<body id="sub" style="background-image:url('http://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
+<body id="sub" style="background-image:url('https://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
 <div id="skipToContent">
 	<a href="#contArea">본문 바로가기</a>
 	<a href="#gnb">주메뉴 바로가기</a>
@@ -53,7 +53,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/"><img src="http://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO interior"></a></div>
+		<div class="home"><a href="/"><img src="https://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO interior"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu"></nav>
 		<a href="javascript:void(0);" class="close">Close</a>
@@ -95,7 +95,7 @@
 				</div>
 				<div class="map">
 					<div id="map" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8f3429547b6bf089e5d3beb4733c7cf5&libraries=services"></script>
+					<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7122065f6de397246f0972135ecfb4ae&libraries=services"></script>
 					<script charset="UTF-8">
 			        var latitude = [[${location.latitude}]];  // 서버로부터 좌표 값 전달
 			        var longitude = [[${location.longitude}]]; // 서버로부터 좌표 값 전달
