--- a/yejo/src/main/resources/templates/main/main.html
+++ b/yejo/src/main/resources/templates/main/main.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="YEJO인테리어">
     	<title>YEJO 인테리어</title>
 
-	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="https://yejo7048.cdn1.cafe24.com/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
 	<link rel="stylesheet" type="text/css" href="/css/reset.css">
@@ -45,7 +45,7 @@
 	    background-repeat: no-repeat;
 	    background-position: 50% 50%;
 	    background-size: contain;
-	    background-image: url(http://yejo7048.cdn1.cafe24.com/images/common/logo.png);
+	    background-image: url(https://yejo7048.cdn1.cafe24.com/images/common/logo.png);
 	}
 
     .admin-popup-close-btn {position:relative; width:30%; max-width:130px; height:100%; display:flex; align-items:center; justify-content:center; text-align:center; cursor: pointer;}
@@ -92,7 +92,7 @@
     <div class="admin-popup-close-check">
         <input id="popup_check2" type="checkbox" name="no_popup" onclick="setNoPopup()">
             <label for="popup_check2">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                <svg version="1.1" id="Layer_1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px"
                     width="22px" height="22px" viewBox="0 0 22 22" enable-background="new 0 0 22 22" xml:space="preserve">
                     <path fill="#b6b6b6" d="M11,22C11,22,11,22,11,22c-2.9,0-5.7-1.1-7.8-3.2C1.1,16.7,0,13.9,0,11C0,4.9,4.9,0,11,0c0,0,0,0,0,0c1.5,0,3.1,0.3,4.5,1
                         C16,1.2,16.2,1.8,16,2.3c-0.2,0.5-0.8,0.7-1.3,0.5C13.5,2.3,12.3,2,11,2c0,0,0,0,0,0c-5,0-9,4-9,9c0,2.4,0.9,4.7,2.6,6.4
@@ -119,7 +119,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="http://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
+		<div class="home"><a href="/index.php"><img src="https://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
