--- a/yejo/src/main/resources/templates/main/portfolio-detail.html
+++ b/yejo/src/main/resources/templates/main/portfolio-detail.html
@@ -11,7 +11,7 @@
     <title th:text="${portfolio.title}">포트폴리오 상세</title>
 
     <link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://yejo7048.cdn1.cafe24.com/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="/css/pretendard.css">
     <link rel="stylesheet" type="text/css" href="/css/animate.css">
     <link rel="stylesheet" type="text/css" href="/css/venobox.css">
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="/js/script.js"></script>
 </head>
 
-<body id="sub" style="background-image:url('http://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
+<body id="sub" style="background-image:url('https://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
 <div id="skipToContent">
     <a href="#contArea">본문 바로가기</a>
     <a href="#gnb">주메뉴 바로가기</a>
