--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -19,13 +19,13 @@
 <meta property="og:description"
 	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
 <meta property="og:image"
-	content="http://yejo7048.cdn1.cafe24.com/images/yejo.png">
+	content="https://yejo7048.cdn1.cafe24.com/images/yejo.png">
 <link rel="canonical" href="https://yejointerior.com">
 
 <link rel="stylesheet" type="text/css"
 	href="/common/froala/css/froala_style.min.css" />
 
-<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="https://yejo7048.cdn1.cafe24.com/images/favicon.png">
 <link rel="stylesheet" type="text/css" href="/css/pretendard.css">
 <link rel="stylesheet" type="text/css" href="/css/animate.css">
 <link rel="stylesheet" type="text/css" href="/css/venobox.css">
@@ -57,7 +57,7 @@
 </head>
 
 <body id="sub"
-	style="background-image: url('http://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
+	style="background-image: url('https://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
 	<div id="skipToContent">
 		<a href="#contArea">본문 바로가기</a> <a href="#gnb">주메뉴 바로가기</a>
 	</div>
@@ -69,7 +69,7 @@
 		<!-- for mobile -->
 		<div id="menu" class="mobile-navigation">
 			<div class="home">
-				<a href="/index.php"><img src="http://yejo7048.cdn1.cafe24.com/images/common/logo2.png"
+				<a href="/index.php"><img src="https://yejo7048.cdn1.cafe24.com/images/common/logo2.png"
 					alt="YEJO INTERIOR"></a>
 			</div>
 			<div class="m-lang"></div>
