--- a/yejo/src/main/resources/templates/admin/main.html
+++ b/yejo/src/main/resources/templates/admin/main.html
@@ -56,7 +56,7 @@
             margin-top: 10px;
         }
     </style>
-    <script src='/js/admin/login.js' defer></script>
+    <script src='/js/admin/login.js?v=1'></script>
 </head>
 <body>
     <div class="container">
