--- a/yejo/src/main/resources/templates/admin/popup.html
+++ b/yejo/src/main/resources/templates/admin/popup.html
@@ -90,7 +90,7 @@
                                         <div class="admin-popup-close-check">
                                             <input id="popup_check2" type="checkbox" name="no_popup" OnClick="javascript:noPopupSet2();">
                                             <label for="popup_check2">
-                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                <svg version="1.1" id="Layer_1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px"
                                                     width="22px" height="22px" viewBox="0 0 22 22" enable-background="new 0 0 22 22" xml:space="preserve">
                                                     <path fill="#b6b6b6" d="M11,22C11,22,11,22,11,22c-2.9,0-5.7-1.1-7.8-3.2C1.1,16.7,0,13.9,0,11C0,4.9,4.9,0,11,0c0,0,0,0,0,0c1.5,0,3.1,0.3,4.5,1
                                                         C16,1.2,16.2,1.8,16,2.3c-0.2,0.5-0.8,0.7-1.3,0.5C13.5,2.3,12.3,2,11,2c0,0,0,0,0,0c-5,0-9,4-9,9c0,2.4,0.9,4.7,2.6,6.4
