--- a/yejo/src/main/resources/templates/main/company.html
+++ b/yejo/src/main/resources/templates/main/company.html
@@ -14,12 +14,12 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="YEJO인테리어">
 	<meta property="og:description"	content="트렌드에 맞춰 나의 공간을 디자인 하다 YEJO INTERIOR YEJO인테리어.">
-	<meta property="og:image" content="http://yejo7048.cdn1.cafe24.com/images/yejo.png">
+	<meta property="og:image" content="https://yejo7048.cdn1.cafe24.com/images/yejo.png">
 	<link rel="canonical" href="https://yejointerior.com">
 
 	<link rel="stylesheet" type="text/css" href="/common/froala/css/froala_style.min.css" />
 
-	<link rel="shortcut icon" type="image/x-icon" href="http://yejo7048.cdn1.cafe24.com/images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="https://yejo7048.cdn1.cafe24.com/images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="/css/pretendard.css">
 	<link rel="stylesheet" type="text/css" href="/css/animate.css">
 	<link rel="stylesheet" type="text/css" href="/css/venobox.css">
@@ -46,7 +46,7 @@
 	<script type="text/javascript" src="/js/script.js"></script>
 </head>
 
-<body id="sub" style="background-image:url('http://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
+<body id="sub" style="background-image:url('https://yejo7048.cdn1.cafe24.com/images/common/sub-bg.gif');">
 <div id="skipToContent">
 				<a href="#contArea">본문 바로가기</a>
 				<a href="#gnb">주메뉴 바로가기</a>
@@ -58,7 +58,7 @@
 
 	<!-- for mobile -->
 	<div id="menu" class="mobile-navigation">
-		<div class="home"><a href="/index.php"><img src="http://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
+		<div class="home"><a href="/index.php"><img src="https://yejo7048.cdn1.cafe24.com/images/common/logo2.png" alt="YEJO INTERIOR"></a></div>
 		<div class="m-lang"></div>
 		<nav class="nav-menu">
 		</nav>
