패스워드ㅡ 변경 버튼 활성화 이벤트 추가 및 관리자 페이지에서 로그아웃 기능 생성(사이드바)

--- a/yejo/src/main/resources/templates/admin/main.html
+++ b/yejo/src/main/resources/templates/admin/main.html
@@ -103,7 +103,7 @@
         <h1>YEJO 인테리어 관리자</h1>
         <input type="password" id="passwordInput" placeholder="패스워드를 입력하세요">
         <button onclick="checkPassword()">확인</button><br><br>
-		<button type="button" onclick="changePwd()">패스워드 변경</button>
+		<button type="button" onclick="changePwd()" id="changePwdButton" disabled style="background-color: #ccc; cursor: not-allowed;" title="패스워드를 입력하세요">패스워드 변경</button>
         <div id="errorMessage" class="error"></div>
     </div>
 	
